[project]
name = "one_to_four"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pandas>=2.2.2",
    "pyfiglet>=1.0.2",
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
